--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,14 @@
     <string name="app_name">TaipeiTravelSpot</string>
     <string name="action_settings">Settings</string>
     <string name="btn_confirm">Confirm</string>
-    <string name="zh_tw">正體中文</string>
+    <string name="zh_tw">正體中文</string>简体中文
+    <string name="zh_cn">简体中文</string>
+    <string name="en">English</string>
+    <string name="ja">日本語</string>
+    <string name="ko">한국어</string>
+    <string name="es">español</string>
+    <string name="th">แบบไทย</string>
+    <string name="vi">Tiếng Việt</string>
     <string name="title_permission_failed">Permission denied</string>
     <string name="hint_permission_camera_failed">No camera permission, please authorize before use.</string>
     <string name="hint_permission_storage_failed">No storage permission, please authorize before use.</string>
